# whycache

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: audit.yml  canary.yml  ci.yml  codeql.yml  release.yml
docs/: architecture.md  json-schema.md  releasing.md
npm/platform/darwin-arm64/: package.json
npm/platform/darwin-x64/: LICENSE-APACHE  package.json
npm/platform/linux-arm64/: package.json
npm/platform/linux-x64/: package.json
npm/platform/win32-x64/: package.json
npm/whycache/: README.md  package.json
scripts/: sync-version.sh
src/: cli.rs  diagnosis.rs  discovery.rs  error.rs  git.rs  lib.rs  main.rs  model.rs  parser.rs  render.rs
tests/: cli.rs
tests/fixtures/: turbo-1.9.json  turbo-2.10.json
tests/fixtures/canary/: package.json
tests/fixtures/repo/: package.json
tests/fixtures/repo/.turbo/runs/: a-baseline.json  z-current.json
tests/golden/: report.json  report.md  report.txt
